Ajoute la fonctionnalité des boutons C et CE

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <button onclick="addToDisplay('/')">/</button>
     </div>
     <div class="calculatorLine">
-      <button class="mainButton" onclick="clearDisplay()">C</button>
-      <button class="mainButton" onclick="undo()">CE</button>
+      <button class="mainButton" onclick="clearAll()">C</button>
+      <button class="mainButton" onclick="clearCurrent()">CE</button>
     </div>
     <button class="exportButton" onclick="exportHistory()">Exporter l'historique en CSV</button>
   </div>
